[REFACTOR/SEMI-RED] Change ReportTest